Added products get and search endpoint